Fix NoMethodError: undefined method 'star' for SolarSystem
- Change @celestial_body.solar_system&.star to @celestial_body.solar_system&.primary_star
- SolarSystem model has primary_star method that returns the most massive star
- This fixes the undefined method error when displaying distance from star

--- a/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
+++ b/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
@@ -137,7 +137,7 @@
                         <div class="data-row">
                             <span class="data-label">Distance from Star:</span>
                             <span class="data-value">
-                                <% if @celestial_body.solar_system&.star %>
+                                <% if @celestial_body.solar_system&.primary_star %>
                                     <%= number_to_human(@celestial_body.distance_from_star || 0, precision: 2) %> km
                                 <% else %>
                                     N/A
